<resources>
    <string name="app_name">Playlist Maker</string>

    <string name="button_search">Поиск</string>
    <string name="button_library">Медиатека</string>
    <string name="button_settings">Настройки</string>

    <string name="settings_title">Настройки</string>
    <string name="settings_dark_theme">Темная тема</string>
    <string name="settings_share_app">Поделиться приложением</string>
    <string name="settings_contact_support">Написать в поддержку</string>
    <string name="settings_user_agreement">Пользовательское соглашение</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">e@povedenok.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/ru/</string>

    <string name="search_title">Поиск</string>
    <string name="search_field_hint">Поиск</string>
    <string name="search_nothing_found">Ничего не нашлось</string>
    <string name="search_no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_update_button">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="player_duration">Длительность</string>
    <string name="player_album">Альбом</string>
    <string name="player_year">Год</string>
    <string name="player_genre">Жанр</string>
    <string name="player_country">Страна</string>
    <string name="default_timer_value">0:00</string>
</resources>