<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/android:colorBackground"
    android:orientation="vertical">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        style="@style/ToolBar"
        android:layout_marginBottom="@dimen/settings_margin_large"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:title="@string/settings_title" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        style="@style/SettingsItem"
        android:text="@string/settings_dark_theme" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_share_button"
        style="@style/SettingsItem"
        android:drawableEnd="@drawable/ic_share_24"
        android:drawableTint="?attr/colorOnSurfaceVariant"
        android:text="@string/settings_share_app" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_support_button"
        style="@style/SettingsItem"
        android:drawableEnd="@drawable/ic_support_24"
        android:drawableTint="?attr/colorOnSurfaceVariant"
        android:text="@string/settings_contact_support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_agreement_button"
        style="@style/SettingsItem"
        android:drawableEnd="@drawable/ic_arrow_forward_24"
        android:drawableTint="?attr/colorOnSurfaceVariant"
        android:text="@string/settings_user_agreement" />
</LinearLayout>
