<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/android:colorBackground"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/search_toolbar"
        style="@style/ToolBar"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:title="@string/search_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_search_field"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp">

        <EditText
            android:id="@+id/search_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:drawableStart="@drawable/ic_search_16"
            android:drawablePadding="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search_field_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/yp_black"
            android:textColorHint="?attr/searchFieldOnColor"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            app:drawableTint="?attr/searchFieldOnColor" />

        <ImageView
            android:id="@+id/search_field_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_search_clear_16"
            android:visibility="gone"
            app:tint="?attr/searchFieldOnColor" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/placeholder_nothing_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="86dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_nothing_found_120" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/search_nothing_found"
                android:textColor="?attr/colorOnSurface"
                android:textSize="19sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/placeholder_no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="86dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_no_internet_120" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/search_no_internet"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSurface"
                android:textSize="19sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="?attr/colorOnSurface"
                android:fontFamily="@font/ys_display_medium"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingHorizontal="14dp"
                android:paddingVertical="10dp"
                android:text="@string/search_update_button"
                android:textAllCaps="false"
                android:textColor="?attr/android:colorBackground"
                android:textSize="14sp"
                app:cornerRadius="54dp" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    </FrameLayout>
</LinearLayout>