<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playerRoot"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideLine24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideLine24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideLine16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideLine16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/playerToolbar"
            style="@style/ToolBar"
            android:layout_marginBottom="@dimen/settings_margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back_24" />


        <ImageView
            android:id="@+id/albumImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine24"
            app:layout_constraintStart_toStartOf="@id/startGuideLine24"
            app:layout_constraintTop_toBottomOf="@id/playerToolbar"
            tools:src="@drawable/ic_placeholder_album_312" />


        <TextView
            android:id="@+id/trackTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textColor="?attr/colorOnSurface"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine24"
            app:layout_constraintStart_toStartOf="@id/startGuideLine24"
            app:layout_constraintTop_toBottomOf="@id/albumImage"
            tools:text="Yesterday (Remastered 2009) Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textColor="?attr/colorOnSurface"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine24"
            app:layout_constraintStart_toStartOf="@id/startGuideLine24"
            app:layout_constraintTop_toBottomOf="@id/trackTitle"
            tools:text="The Beatles The Beatles The Beatles The Beatles The Beatles" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/addToPlaylistButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="64dp"
            android:background="@drawable/bg_player_control_small"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_player_add_to_playlist"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:iconTint="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@id/playButton"
            app:layout_constraintEnd_toStartOf="@id/playButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/startGuideLine24"
            app:layout_constraintTop_toTopOf="@id/playButton"
            app:layout_constraintVertical_chainStyle="spread_inside" />


        <ImageView
            android:id="@+id/playButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginTop="38dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_player_play"
            android:tint="?attr/colorOnSurface"
            app:layout_constraintEnd_toStartOf="@id/likeButton"
            app:layout_constraintStart_toEndOf="@id/addToPlaylistButton"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/likeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="64dp"
            android:background="@drawable/bg_player_control_small"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_player_like"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:iconTint="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@id/playButton"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine24"
            app:layout_constraintStart_toEndOf="@id/playButton"
            app:layout_constraintTop_toTopOf="@id/playButton" />


        <TextView
            android:id="@+id/remainingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnSurface"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine24"
            app:layout_constraintStart_toStartOf="@id/startGuideLine24"
            app:layout_constraintTop_toBottomOf="@id/playButton"
            tools:text="0:30" />


        <TextView
            android:id="@+id/durationLabel"
            style="@style/PlayerTrackLabel"
            android:layout_marginTop="38dp"
            android:text="@string/player_duration"
            app:layout_constraintStart_toStartOf="@id/startGuideLine16"
            app:layout_constraintTop_toBottomOf="@id/remainingTime" />

        <TextView
            android:id="@+id/albumLabel"
            style="@style/PlayerTrackLabel"
            android:text="@string/player_album"
            app:layout_constraintStart_toStartOf="@id/startGuideLine16"
            app:layout_constraintTop_toBottomOf="@id/durationLabel" />

        <TextView
            android:id="@+id/yearLabel"
            style="@style/PlayerTrackLabel"
            android:text="@string/player_year"
            app:layout_constraintStart_toStartOf="@id/startGuideLine16"
            app:layout_constraintTop_toBottomOf="@id/albumLabel" />

        <TextView
            android:id="@+id/genreLabel"
            style="@style/PlayerTrackLabel"
            android:text="@string/player_genre"
            app:layout_constraintStart_toStartOf="@id/startGuideLine16"
            app:layout_constraintTop_toBottomOf="@id/yearLabel" />

        <TextView
            android:id="@+id/countryLabel"
            style="@style/PlayerTrackLabel"
            android:text="@string/player_country"
            app:layout_constraintStart_toStartOf="@id/startGuideLine16"
            app:layout_constraintTop_toBottomOf="@id/genreLabel" />


        <TextView
            android:id="@+id/durationValue"
            style="@style/PlayerTrackValue"
            app:layout_constraintBaseline_toBaselineOf="@id/durationLabel"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine16"
            tools:text="5:35" />

        <TextView
            android:id="@+id/albumValue"
            style="@style/PlayerTrackValue"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            app:layout_constraintBaseline_toBaselineOf="@id/albumLabel"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine16"
            app:layout_constraintStart_toEndOf="@id/albumLabel"
            tools:text="Yesterday" />

        <TextView
            android:id="@+id/yearValue"
            style="@style/PlayerTrackValue"
            app:layout_constraintBaseline_toBaselineOf="@id/yearLabel"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine16"
            tools:text="1965" />

        <TextView
            android:id="@+id/genreValue"
            style="@style/PlayerTrackValue"
            app:layout_constraintBaseline_toBaselineOf="@id/genreLabel"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine16"
            tools:text="Rock" />

        <TextView
            android:id="@+id/countryValue"
            style="@style/PlayerTrackValue"
            app:layout_constraintBaseline_toBaselineOf="@id/countryLabel"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine16"
            tools:text="Великобритания" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>